logs/validate.20260329-210340.log
error[E0425]: cannot find function `obeys_feq_full_trigger` in this scope
   --> src/Chap41/AVLTreeSetMtPer.rs:273:28
    |
273 |                     assert(obeys_feq_full_trigger::<T>());
    |                            ^^^^^^^^^^^^^^^^^^^^^^
    |
   ::: src/Types.rs:185:5
    |
185 |     pub open spec fn obeys_feq_full_Edge<V: StT>() -> bool {
    |     ------------------------------------------------------ similarly named function `obeys_feq_full_Edge` defined here
    |
help: a function with a similar name exists
    |
273 -                     assert(obeys_feq_full_trigger::<T>());
273 +                     assert(obeys_feq_full_Edge::<T>());
    |
help: consider importing this function
    |
 25 +     use crate::vstdplus::feq::feq::obeys_feq_full_trigger;
    |

error[E0425]: cannot find function `lemma_cloned_view_eq` in this scope
   --> src/Chap41/AVLTreeSetMtPer.rs:274:21
    |
274 |                     lemma_cloned_view_eq::<T>(vals@[i as int], vals[i as int].clone());
    |                     ^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::vstdplus::feq::feq::lemma_cloned_view_eq;
    |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 4s
Sampled Memory Usage: peak rust_verify RSS: 529MB, peak z3 RSS: 0MB, min free: 21845MB
Sampled CPU Usage: rust_verify: 5s, z3 children: 0s
